--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 			}
 		},
 
-        // Visual Studio Code Customization
+		// Visual Studio Code Customization
 		"vscode": {
 			// Set *default* container specific settings.json values on container create.
 			"settings": {
@@ -59,7 +59,7 @@
 	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
+	"postCreateCommand": "bash .devcontainer/clone-repo.sh",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node",
