--- a/config/development/server.toml
+++ b/config/development/server.toml
@@ -111,7 +111,7 @@ script-src 'self' https://giscus.app/client.js https://giscus.app/js/iframeResiz
 'sha256-jgys9Z/hlriwC/SULrqh66L7kRPJwGJ3I1TY2J3XzKk=' 'sha256-4V8WxmH+ykIlGiV2pbQGmG3szs7GDgKIdFgCddG6ex0='
 'sha256-2fUKdVx0IqBIkSSqMiTkxBG8jGbNnTPFqpi8YcdgTIc=' 'sha256-8RwKSotybrJR/vRlohUZmoKmUztEeZ3opJnv5GaaVhw='
 'sha256-Qlu2DKjAv62OoYD/+o1648D77aar0E5YZNpQdq6PtOE=';
-style-src 'self' 'unsafe-hashes' https://cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/
+style-src 'self' 'unsafe-hashes' https://giscus.app/default.css https://cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/
 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o=' 'sha256-AN/BwYzHD/GnCad3utJZUlQ8jiR4MDFg5++YjWHDnaQ='
 'sha256-MbtVhF2YYaQ+jxjj/xmHw3IdSfL/52aKP0AZyGBTmPo=' 'sha256-De7agAeYqm6ANIVvRRW6HFWi52AJW8inhFE0gSdgXnI='
 'sha256-2ycMMPFUOnyA34Yg3+cS/BEKpCQBZ+CBs9yaEsIzN+E=';
