--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Setup Hugo Extended
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: latest
+        hugo-version: '0.111.3'
         extended: true
 
     #- name: Install and Set up Hugo Extended
