Update Hugo version to 0.112.3 and remove `-e production`

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -81,7 +81,7 @@ jobs:
 
     - name: Building the Static Web
       run: |
-        hugo --gc -e production
+        hugo --gc
 
     - name: Compressing Static Web Files
       run: |
