--- a/config/development/module.toml
+++ b/config/development/module.toml
@@ -1,1 +1,1 @@
-replacements = "github.com/FarrelF/stack-modified -> ../../stack-modified"
+#replacements = "github.com/FarrelF/stack-modified -> ../../stack-modified"
