--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,7 +1,20 @@
-customFavicon = "img/favicon.png"
 mainSections = [ "post" ]
 featuredImageField = "image"
 rssFullContent = true
+
+[customFavicon]
+enabled = true
+favicon = "img/favicon.ico"
+favicon32 = "img/favicon-32x32.png"
+favicon16 = "img/favicon-16x16.png"
+safariPinned = "img/safari-pinned-tab.svg"
+appleTouchIcon = "img/apple-touch-icon.png"
+
+[customFavicon.browserConfig]
+enabled = true
+
+[customFavicon.webManifest]
+enabled = true
 
 [dateFormat]
 published = "Monday, 02 January 2006"
