--- a/config/production/params.toml
+++ b/config/production/params.toml
@@ -24,6 +24,6 @@ username = "FarrelF"
 utcOffset = 7
 
 [umami]
-enabled = true
+enabled = false
 hostURL = "https://analitik.franqois.id"
 websiteID= "b4aac942-29c5-4f5e-8403-77d9c7eeda23"
