Modified theme update and disable RSS full content

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
 mainSections = [ "post" ]
 featuredImageField = "image"
-rssFullContent = true
+rssFullContent = false
 
 [customFavicon]
 enabled = true
