--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -3,7 +3,7 @@ main = [ ]
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/FarrelF/Blog"
+url = "https://github.com/FarrelF"
 weight = -100
 
 [social.params]
