--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -82,13 +82,13 @@ jobs:
     - name: Building the Static Web
       run: |
         hugo --gc
+        printf "SHORT_SHA=%s\n" ${GITHUB_SHA::7} >> $GITHUB_ENV
 
     - name: Compressing Static Web Files
       run: |
-        pigz -km -9 $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.json' -o -iname '*.xml' -o -iname '*.svg' -o -iname '*.txt')
-        brotli -Zn $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.json' -o -iname '*.xml' -o -iname '*.svg' -o -iname '*.txt')
+        # pigz -km -9 $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.json' -o -iname '*.xml' -o -iname '*.svg' -o -iname '*.txt')
+        # brotli -Zn $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.json' -o -iname '*.xml' -o -iname '*.svg' -o -iname '*.txt')
         tar cvf - ./public | pigz -9 > files.tar.gz
-        printf "SHORT_SHA=%s\n" ${GITHUB_SHA::7} >> $GITHUB_ENV
 
     - name: Upload Output File to Artifact
       uses: actions/upload-artifact@v4
@@ -114,15 +114,17 @@ jobs:
         tar -xvzf files.tar.gz
     
     - name: Deploying to Bunny Storage
-      uses: own3d/bunny-action@main
-      env:
-        BUNNY_API_ACCESS_KEY: ${{ secrets.BUNNY_API_KEY }}
-        BUNNY_STORAGE_HOSTNAME: storage.bunnycdn.com
-        BUNNY_STORAGE_USERNAME: ${{ secrets.BUNNY_STORAGE_USERNAME }}
-        BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD }}
-        BUNNY_PULL_ZONE_ID: ${{ secrets.BUNNY_PULLZONE_ID }}
+      uses: ayeressian/bunnycdn-storage-deploy@v2.2.3
       with:
-        args: deploy --dir=./public
+        source: 'public'
+        destination: ''
+        storageZoneName: "${{ secrets.BUNNY_STORAGE_USERNAME }}"
+        storagePassword: "${{ secrets.BUNNY_STORAGE_PASSWORD }}"
+        accessKey: "${{ secrets.BUNNY_API_KEY }}"
+        pullZoneId: "${{ secrets.BUNNY_PULLZONE_ID }}"
+        upload: "true"
+        remove: "true"
+        purgePullZone: "true"
 
   deploy_to_storj-ap1-s3:
     name: Deploy to Storj DCS AP1 S3 Storage
