Migrate Shortcode from `twitter_simple` to `x`
Because `twitter`, `tweet` and `twitter_simple` code were deprecated since v0.142.0

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -20,6 +20,12 @@ page = "/:slug/"
 tags = "/tag/:slug/"
 categories = "/kategori/:slug/"
 
+[privacy]
+[privacy.x]
+disable = false
+enableDNT = true
+simple = true
+
 [related]
 includeNewer = true
 threshold = 60
