--- a/netlify.toml
+++ b/netlify.toml
@@ -38,32 +38,56 @@ HUGO_ENABLEGITINFO = "true"
 
 ### Netlify Redirects
 [[redirects]]
-from = "http://www.farrel.franqois.id/*"
-to = "https://farrel.franqois.id/:splat"
+from = "http://www.farrelf.blog/*"
+to = "https://farrelf.blog/:splat"
 status = 301
 force = true
 
 [[redirects]]
-from = "https://www.farrel.franqois.id/*"
-to = "https://farrel.franqois.id/:splat"
+from = "https://www.farrelf.blog/*"
+to = "https://farrelf.blog/:splat"
 status = 301
 force = true
 
 [[redirects]]
 from = "http://farrel.franqois.id/*"
-to = "https://farrel.franqois.id/:splat"
+to = "https://farrelf.blog/:splat"
+status = 301
+force = true
+
+[[redirects]]
+from = "https://farrel.franqois.id/*"
+to = "https://farrelf.blog/:splat"
+status = 301
+force = true
+
+[[redirects]]
+from = "http://www.farrel.franqois.id/*"
+to = "https://farrelf.blog/:splat"
+status = 301
+force = true
+
+[[redirects]]
+from = "https://www.farrel.franqois.id/*"
+to = "https://farrelf.blog/:splat"
+status = 301
+force = true
+
+[[redirects]]
+from = "http://farrelf.blog/*"
+to = "https://farrelf.blog/:splat"
 status = 301
 force = true
 
 [[redirects]]
 from = "http://farrelf.netlify.app/*"
-to = "https://farrel.franqois.id/:splat"
+to = "https://farrelf.blog/:splat"
 status = 301
 force = true
 
 [[redirects]]
 from = "https://farrelf.netlify.app/*"
-to = "https://farrel.franqois.id/:splat"
+to = "https://farrelf.blog/:splat"
 status = 301
 force = true
 
