Add `.markdownlint.yaml` file

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -12,6 +12,7 @@ on:
       - "**/netlify.toml"
       - "config/development/**"
       - "**/archetypes/**"
+      - "**/.markdownlint.*"
 
 jobs:
   build:
