--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -13,6 +13,7 @@ on:
       - "**/netlify.toml"
       - "config/development/**"
       - "**/archetypes/**"
+      - "**/.markdownlint.*"
 
 jobs:
   build:
