--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Setup Hugo Extended
       uses: peaceiris/actions-hugo@v3
       with:
-        hugo-version: 0.152.2
+        hugo-version: latest
         extended: true
 
     #- name: Install and Set up Hugo Extended
