--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -20,11 +20,14 @@ jobs:
     runs-on: ubuntu-24.04
     env:
       TZ: Asia/Jakarta
+      GO_VERSION: stable
       HUGO_ENV: production
+      HUGO_VERSION: latest
+      DART_SASS_VERSION: latest
 
     steps:
     - name: Checkout the Code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
       with:
         fetch-depth: 0
 
@@ -42,38 +45,55 @@ jobs:
         sudo update-locale LANG=C.UTF-8 LC_MESSAGES=POSIX
         sudo ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime
 
-    - name: Setup Hugo Extended
-      uses: peaceiris/actions-hugo@v3
-      with:
-        hugo-version: latest
-        extended: true
+    #- name: Setup Hugo Extended
+    #  uses: peaceiris/actions-hugo@v3
+    #  with:
+    #    hugo-version: latest
+    #    extended: true
 
-    #- name: Install and Set up Hugo Extended
-    #  run: |
-    #    HUGO_VERSION="$(curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest | grep tag_name | cut -d 'v' -f2 | cut -d'"' -f1)"
-    #    cd /tmp/
-    #    wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
-    #    tar -xzf hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
-    #    chmod +x hugo
-    #    sudo sh -c 'mv hugo /usr/local/bin/; chown root:root /usr/local/bin/hugo'
-    #    rm hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz LICENSE README.md
-    #    cd ${GITHUB_WORKSPACE}
-    #    which hugo && hugo version
-    #    # find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}' > Images.list
-    #    # sha256sum $(cat Images.list) > Images.hash.list
-    #    # git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
+    - name: Setup Go
+      uses: actions/setup-go@v6
+      with:
+        go-version: ${{ env.GO_VERSION }}
+        cache: false
+
+    - name: Setup Hugo Extended
+      run: |
+        if [ "$HUGO_VERSION" = 'latest' ]; then
+          HUGO_VERSION="$(curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest | grep tag_name | cut -d 'v' -f2 | cut -d'"' -f1)"
+        fi
+        cd /tmp/
+        wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
+        tar -xzf hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
+        install -Dm755 hugo /usr/local/bin/hugo
+        install -Dm644 LICENSE /usr/share/licenses/hugo/LICENSE
+        chown root:root /usr/local/bin/hugo
+        rm hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz LICENSE README.md
+        cd ${GITHUB_WORKSPACE}
+        which hugo && hugo version
+    
+    - name: Setup Dart Sass
+      run: |
+        if [ "$DART_SASS_VERSION" = 'latest' ]; then
+          DART_SASS_VERSION="$(curl -s https://api.github.com/repos/sass/dart-sass/releases/latest | grep tag_name | cut -d 'v' -f2 | cut -d'"' -f4)"
+        fi
+        wget https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
+        tar -C "${HOME}/.local" -xf "dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz"
+        rm "dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz"
+        echo "${HOME}/.local/dart-sass" >> "${GITHUB_PATH}"
+        which sass && sass --version
 
     - name: Setup Hugo Resources Cache
-      uses: actions/cache@v4
+      uses: actions/cache@v5
       with:
         path: |
           ./resources
-        key: v2-8-hugo
+        key: hugo-${{ github.run_id }}
         restore-keys: | 
-          - v2-8-hugo
+          - hugo-
 
     - name: Setup Hugo Modules Cache
-      uses: actions/cache@v4
+      uses: actions/cache@v5
       with:
         path: /tmp/hugo_cache_runner
         key: ${{ runner.os }}-hugo-modules-${{ hashFiles('**/go.sum') }}
@@ -92,7 +112,7 @@ jobs:
         tar cvf - ./public | pigz -9 > files.tar.gz
 
     - name: Upload Output File to Artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v6
       with:
         name: build-result-${{ env.SHORT_SHA }}
         path: files.tar.gz
@@ -104,16 +124,16 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
     - name: Checkout the Code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
     - name: Setup Environment Variable
       run: printf "SHORT_SHA=%s\n" ${GITHUB_SHA::7} >> $GITHUB_ENV
     - name: Download Output File from Artifact
-      uses: actions/download-artifact@v4
+      uses: actions/download-artifact@v7
       with:
         name: build-result-${{ env.SHORT_SHA }}
 
     - name: Setup Mise and Thumper
-      uses: jdx/mise-action@v2
+      uses: jdx/mise-action@v3
     - name: Decompressing Files
       run: |
         tar -xvzf files.tar.gz
@@ -141,7 +161,7 @@ jobs:
     - name: Setup Environment Variable
       run: printf "SHORT_SHA=%s\n" ${GITHUB_SHA::7} >> $GITHUB_ENV
     - name: Download Output File from Artifact
-      uses: actions/download-artifact@v4
+      uses: actions/download-artifact@v7
       with:
         name: build-result-${{ env.SHORT_SHA }}
 
