Try to fix error

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -78,10 +78,10 @@ jobs:
         fi
         cd /tmp/
         wget https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
-        tar -xzf "dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz"
+        tar -xzf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
         mv dart-sass /usr/local/bin/
-        rm "dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz"
-        echo "/usr/local/bin/dart-sass" >> "${GITHUB_PATH}"
+        rm dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
+        echo /usr/local/bin/dart-sass >> ${GITHUB_PATH}
         which sass && sass --version
 
     - name: Setup Hugo Resources Cache
